Bug 1461070: Skip starting other transitions based on specified, not already-started transitions. r=birtles,dbaron

MozReview-Commit-ID: 3D5elrj2Ypi